# discoembed

./: .gitignore  Justfile  Makefile  README.md  config.json  discoembed.py  index.html  pyproject.toml  requirements.txt  script.js  style.css  vercel.json
app/: main.py
app/api/v1/: api.py  router.py
app/api/v1/endpoints/: embed.py  health.py
app/core/: __init__.py  app_config.py  config.py  logging_config.py  settings.py
app/services/: validation.py
app/templates/: embed.html
static/data/: functions.py
